# cmake-tutorial

./: CMakeLists.txt  config.h  config.h.in  main.cc  math.cc
math/: CMakeLists.txt  math.h
